--- a/10期JS正式课/正式课第七周/CRM/detail.html
+++ b/10期JS正式课/正式课第七周/CRM/detail.html
@@ -27,5 +27,6 @@
 </div>
 
 <script type="text/javascript" src="js/ajax.js"></script>
+<script type="text/javascript" src="js/detail.js"></script>
 </body>
 </html>
