--- a/10期JS正式课/正式课第七周/CRM/index.html
+++ b/10期JS正式课/正式课第七周/CRM/index.html
@@ -19,7 +19,7 @@
     </h2>
 
     <ul class="custom-list" id="customList">
-        <li>
+        <!--<li>
             <span class="w50">1</span>
             <span class="w150">珠峰培训</span>
             <span class="w50">28</span>
@@ -27,12 +27,13 @@
             <span class="w200">北京市昌平区回龙观东大街</span>
             <span class="w150 control">
                 <a href="">修改</a>
-                <a href="">删除</a>
+                <a href="" data-id="1">删除</a>
             </span>
-        </li>
+        </li>-->
     </ul>
 </div>
 
 <script type="text/javascript" src="js/ajax.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
