--- a/公开课第二周/公开课第二周第一天/2.confirm.html
+++ b/公开课第二周/公开课第二周第一天/2.confirm.html
@@ -23,6 +23,7 @@
 234o92438029348234920342934
 234o92438029348234920342934
 <script>
+    console.log(![]==false)
     /*var bOk=confirm('你吃早餐了吗？');//confirm返回值是一个布尔值；
     if(bOk){
         document.write('我吃过早餐了')
@@ -35,7 +36,7 @@
     alert(obj.fn());*/
     //document.write('document.write  akalakakajk')
     function aa(){
-        alert("aaaaaa");
+        //alert("aaaaaa");
     }
     aa();
     var obj={0:'lsdf',1:'sdkjl'}; //如果对象中的属性名为数字，一定要通过[];
